--- a/CSVParserTests/CSVParserTests.csproj
+++ b/CSVParserTests/CSVParserTests.csproj
@@ -16,4 +16,16 @@
       <ProjectReference Include="..\CSV\CSV.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Compile Remove="obj\**" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <EmbeddedResource Remove="obj\**" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <None Remove="obj\**" />
+    </ItemGroup>
+
 </Project>
